[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/actors/vehicle/Vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/predator/Predator.gd" type="Script" id=2]
[ext_resource path="res://src/actors/prey/Prey.tres" type="SpriteFrames" id=3]
[ext_resource path="res://src/utils/fsm/StateMachine.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=2]
radius = 72.0
height = 16.0

[sub_resource type="CircleShape2D" id=1]
radius = 384.333

[node name="Predator" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 53
script = ExtResource( 2 )
wall_avoidance_length = 400.0
max_stamina = 2000

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
visible = false
shape = SubResource( 2 )

[node name="PreyDetector" type="Area2D" parent="." index="2"]
position = Vector2( 0, 32 )
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PreyDetector" index="0"]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="3"]
scale = Vector2( 1.25, 1.25 )
frames = ExtResource( 3 )
animation = "walking"

[node name="ObstacleAvoidanceRays" type="Node2D" parent="." index="4"]

[node name="RayCast2D" type="RayCast2D" parent="ObstacleAvoidanceRays" index="0"]
position = Vector2( 64, 0 )
enabled = true
cast_to = Vector2( 48, 0 )
collision_mask = 16

[node name="RayCast2D2" type="RayCast2D" parent="ObstacleAvoidanceRays" index="1"]
position = Vector2( 64, 64 )
enabled = true
cast_to = Vector2( 48, 0 )
collision_mask = 16

[node name="RayCast2D5" type="RayCast2D" parent="ObstacleAvoidanceRays" index="2"]
position = Vector2( 64, 32 )
enabled = true
cast_to = Vector2( 48, 0 )
collision_mask = 16

[node name="RayCast2D3" type="RayCast2D" parent="ObstacleAvoidanceRays" index="3"]
position = Vector2( 63, -64 )
enabled = true
cast_to = Vector2( 48, 0 )
collision_mask = 16

[node name="RayCast2D4" type="RayCast2D" parent="ObstacleAvoidanceRays" index="4"]
position = Vector2( 63, -32 )
enabled = true
cast_to = Vector2( 48, 0 )
collision_mask = 16

[node name="StateMachine" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( 0, 32 )

[node name="PreyDetectorRaycasts" type="Node2D" parent="." index="6"]

[node name="RayCast2D" type="RayCast2D" parent="PreyDetectorRaycasts" index="0"]
enabled = true
cast_to = Vector2( 384, 0 )
collision_mask = 53

[node name="RayCast2D2" type="RayCast2D" parent="PreyDetectorRaycasts" index="1"]
position = Vector2( 0, -40 )
enabled = true
cast_to = Vector2( 384, 0 )
collision_mask = 53

[node name="RayCast2D3" type="RayCast2D" parent="PreyDetectorRaycasts" index="2"]
position = Vector2( 0, 40 )
enabled = true
cast_to = Vector2( 384, 0 )
collision_mask = 53

[node name="WallAvoidanceRays" type="Node2D" parent="." index="7"]

[node name="RayCast2D" type="RayCast2D" parent="WallAvoidanceRays" index="0"]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 32

[node name="RayCast2D2" type="RayCast2D" parent="WallAvoidanceRays" index="1"]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 32

[node name="RayCast2D3" type="RayCast2D" parent="WallAvoidanceRays" index="2"]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 32

[connection signal="body_entered" from="PreyDetector" to="." method="_on_PreyDetector_body_entered"]
[connection signal="body_exited" from="PreyDetector" to="." method="_on_PreyDetector_body_exited"]
